--- a/Resume.qmd
+++ b/Resume.qmd
@@ -13,8 +13,8 @@ When you click the **Render** button a document will be generated that includes 
 
 ```{r}
 library(tidyverse)
-#resume<-read_csv(resume.csv)
-#resume
+resume<-read.csv("resume.csv")
+resume
 ```
 
 You can add options to executable code like this 
