--- a/Resume.qmd
+++ b/Resume.qmd
@@ -3,25 +3,13 @@ title: "class-2024-07-15"
 format: html
 ---
 
-## Quarto
-
-Quarto enables you to weave together content and executable code into a finished document. To learn more about Quarto see <https://quarto.org>.
-
-## Running Code
-
-When you click the **Render** button a document will be generated that includes both content and the output of embedded code. You can embed code like this:
+Broad topic: Does race affect employment?
+Specific question: Do White-sounding names recieve callbacks more often than African-American-sounding names?
 
 ```{r}
+#| echo: false
 library(tidyverse)
 resume<-read.csv("resume.csv")
 resume
 ```
 
-You can add options to executable code like this 
-
-```{r}
-#| echo: false
-2 * 2
-```
-
-The `echo: false` option disables the printing of code (only output is displayed).
